[package]
name = "tossinvest-rs"
version = "0.1.0"
edition = "2021"
description = "Hexagonal Rust SDK for the Toss Securities (토스증권) Open API (Unofficial)"
license = "Apache-2.0"
repository = "https://github.com/epicsagas/tossinvest-rs"
documentation = "https://docs.rs/tossinvest-rs"
readme = "README.md"
keywords = ["toss", "tossinvest", "securities", "stock", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.75"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "eval_harness"
harness = false

[[test]]
name = "endpoints"
path = "tests/endpoints.rs"
